--- a/gulimall-gateway/src/main/resources/bootstrap.properties
+++ b/gulimall-gateway/src/main/resources/bootstrap.properties
@@ -1,18 +1,19 @@
-spring.application.name=gulimall-coupon
+spring.application.name=gulimall-gateway
 spring.cloud.nacos.config.server-addr=127.0.0.1:8848
+spring.cloud.nacos.config.namespace=7ce03beb-1577-4b01-b664-fd40e4168ad0
 
-#指定配置中心的命名空间
-spring.cloud.nacos.config.namespace=2a597d7c-ce78-44e3-bb0c-a628b61b87aa
-
-spring.cloud.nacos.config.ext-config[0].data-id=mybatis.yml
-spring.cloud.nacos.config.ext-config[0].group=dev
+##指定配置中心的命名空间
+#spring.cloud.nacos.config.namespace=2a597d7c-ce78-44e3-bb0c-a628b61b87aa
+#
+spring.cloud.nacos.config.ext-config[0].data-id=gulimall-gateway.yml
+spring.cloud.nacos.config.ext-config[0].group=DEFAULT_GROUP
 spring.cloud.nacos.config.ext-config[0].refresh=true
-
-spring.cloud.nacos.config.ext-config[1].data-id=datasource.yml
-spring.cloud.nacos.config.ext-config[1].group=dev
-spring.cloud.nacos.config.ext-config[1].refresh=true
-
-
-spring.cloud.nacos.config.ext-config[2].data-id=other.yml
-spring.cloud.nacos.config.ext-config[2].group=dev
-spring.cloud.nacos.config.ext-config[2].refresh=true
+#
+#spring.cloud.nacos.config.ext-config[1].data-id=datasource.yml
+#spring.cloud.nacos.config.ext-config[1].group=dev
+#spring.cloud.nacos.config.ext-config[1].refresh=true
+#
+#
+#spring.cloud.nacos.config.ext-config[2].data-id=other.yml
+#spring.cloud.nacos.config.ext-config[2].group=dev
+#spring.cloud.nacos.config.ext-config[2].refresh=true
